# grk

./: .coverage  .gitignore  .grk_session.pid  .grkrc  LICENSE  README.md  __git.sh  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  tests.yml
docs/: configuration.md  index.md  installation.md  usage.md
resources/: grk_aliases.fish  shorthand.fish
src/grk/: api.py  cli.py  config.py  config_handler.py  models.py  runner.py  utils.py
src/grk/cli/: __init__.py  cli.py
src/grk/config/: __init__.py  config.py  config_handler.py  models.py
src/grk/core/: __init__.py  api.py  runner.py  session.py
src/grk/utils/: __init__.py  logging.py
tests/: test_api.py  test_cli.py  test_config.py  test_config_handler.py  test_runner.py  test_session.py  test_utils.py
