[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grk"
version = "0.1.1"
description = "CLI tool to push cfold to Grok LLM and save output"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "click>=8.1.7,<9",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "requests>=2.32.3,<3",
    "ruamel.yaml>=0.17",
    "rich>=13.7.1",  # Added for terminal visualization
]

[project.scripts]
grk = "grk.cli:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0,<7",
    "mkdocs>=1.5.3,<2",
    "mkdocs-material>=9.5.3,<10",
    "pytest>=7.0,<8",
    "pytest-mock>=3.10,<4"
]

[tool.hatch.build.targets.wheel]
packages = ["src/grk"]
