[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grk"
version = "0.2.2"
description = "CLI tool to call Grok LLM"
authors = [{ name = "wr1", email = "8971152+wr1@users.noreply.github.com"}]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "ruamel.yaml>=0.17",
    "rich>=13.7.1",  # Added for terminal visualization
    "pydantic>=2.6",  # Added for config validation and parsing
    "xai-sdk",  # Added for XAI SDK
    "treeparse @ git+https://github.com/wr1/treeparse.git@master",  # Added for CLI parsing
]

[project.scripts]
grk = "grk.cli:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0,<7",
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.14,<10",
    "pytest>=7.0,<8",
    "pytest-cov",
    "pytest-mock>=3.10,<4"
]

[tool.hatch.build.targets.wheel]
packages = ["src/grk"]


[tool.hatch.metadata]
allow-direct-references = true